--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,13 +11,14 @@ springBoot:
 
 #http://localhost:9090/SpringBoot-Mail-Notification/swagger-ui.html
 spring:
-  datasource:
-    url: jdbc:h2:~/balla
-    password: balla
-    username: balla
-    driver-class-name: org.h2.Driver
-  jpa:
+   jpa:
     hibernate:
-      use-new-id-generator-mappings: false
-       
+      use-new-id-generator-mappings: true
+
+
+     
+loan:
+ noOfmonths: 
+    months: 12 
+ interestRateAmount: 1.5
 
